--- a/valve.html
+++ b/valve.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0">
     <title>Valve</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="styles/valve.css"/>
     <link rel="icon" type="image/x-icon" href="/images/icon.png">
     <script src="scripts/current.js" defer></script>
+    <script src="scripts/mobile.js"></script>
 </head>
-<body onload="set_current_page('valve')">
+<body onload="mobile_other(); set_current_page('valve')">
     <div class="grid-container">
         <div class="header_bg"></div>
         <a class="signature" href="index.html">NicholasYoung.info</a>
