--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0">
     <title>Skills and Experience</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +12,9 @@
     <script src="scripts/current.js" defer></script>
     <script src="scripts/toggleimages.js" defer></script>
     <script src="scripts/imgopen.js" defer></script>
+    <script src="scripts/mobile.js"></script>
 </head>
-<body onload="set_current_page('skills')">
+<body onload="mobile_other(); set_current_page('skills')">
     <div class="grid-container">
         <div class="header_bg"></div>
         <a class="signature" href="index.html">NicholasYoung.info</a>
@@ -32,7 +33,7 @@
                 <div class="content-title">Intel, Pre-Silicon Hardware Validation Engineer</div>
                 <div class="content-item">
                     <div class="img-container content-left">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Intel_logo_%282006-2020%29.svg" class="content-image"></img>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Intel_logo_%282006-2020%29.svg" loading="lazy" class="content-image"></img>
                     </div>
                     <div class="content-text">
                         May 2019 marked the beginning of my career at Intel, which was as an intern working on pre-silicon hardware validation.
@@ -52,7 +53,10 @@
             </div>
             <div class="content">
                 <div class="content-title">Programming</div>
-                <div class="content-item">
+                <div class="content-item reverse">
+                    <div class="img-container content-right">
+                        <img src="images/skills/programming.jpg" class="content-image"></img>
+                    </div>
                     <div class="content-text">
                         I first began learning programming back in highschool when I took an introduction to programming class.
                         The class was only half a school year long and taught everything using scratch and visual basic, but it introduced me to the fundamentals of what would become a lifelong passion.
@@ -61,9 +65,6 @@
                         C and C++ continued to be my main programming language throughout all of college, where I learned more advanced techniques, data structures, and algorithms.
                         As my classes focused more on embedded systems I also learned Verilog and Systemverilog, the latter of which I have used extensively during my work at Intel.
                         I also taught myself python for writing simple scripts and testing programming ideas, which has proved useful both at work and for hobby projects.
-                    </div>
-                    <div class="img-container content-right">
-                        <img src="images/skills/programming.jpg" class="content-image"></img>
                     </div>
                 </div>
                 <div class="breakline"></div>
@@ -88,7 +89,10 @@
             </div>
             <div class="content">
                 <div class="content-title">Software Development Computer Skills</div>
-                <div class="content-item">
+                <div class="content-item reverse">
+                    <div class="img-container content-right">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" loading="lazy" class="content-image"></img>
+                    </div>
                     <div class="content-text">
                         As useful as the Windows operating system and GUIs are, I have become right at home using Linux and command line interfaces to interact with computers.
                         I was introduced to them during my first college programming class, and they have been an integral part of my work ever since.
@@ -97,9 +101,6 @@
                         Alongside these skills I also learned to use Git for version control, which has helped immensely in not only personal projects, but when working collaboratively as well.
                         The ability to track changes over time or quickly pull in fixes from colleagues has saved me significant amounts of work in the past, and helped me quickly
                         provide support for others as well.
-                    </div>
-                    <div class="img-container content-right">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" class="content-image"></img>
                     </div>
                 </div>
                 <div class="breakline"></div>
@@ -123,7 +124,10 @@
             </div>
             <div class="content">
                 <div class="content-title">Eagle Scout</div>
-                <div class="content-item">
+                <div class="content-item reverse">
+                    <div class="img-container content-right">
+                        <img src="images/skills/Eagle/award.JPG" class="content-image"></img>
+                    </div>
                     <div class="content-text">
                         I was a part of my local scout troop from June 2009 up until I turned 18 in June 2016.
                         During this time I worked to advance through the ranks of scouting, eventually reaching the highest rank of Eagle Scout.
@@ -133,14 +137,11 @@
                         This involved significant planning to ensure the project went smoothly and met all requirements, as well as leadership skills to recruit and supervise a large group of younger scouts.
                         The final result was well received though and has seen much use since it was put in place.
                     </div>
-                    <div class="img-container content-right">
-                        <img src="images/skills/Eagle/award.JPG" class="content-image"></img>
-                    </div>
                 </div>
                 <button onclick="toggle_visible('eagle')" class="img-button" id="button-eagle">Show additional images</button>
                 <div class="moreimages" id="images-eagle">
-                    <img src="images/skills/Eagle/bridge1.JPG" class="additional-image"></img>
-                    <img src="images/skills/Eagle/bridge2.JPG" class="additional-image"></img>
+                    <img src="images/skills/Eagle/bridge1.JPG" loading="lazy" class="additional-image"></img>
+                    <img src="images/skills/Eagle/bridge2.JPG" loading="lazy" class="additional-image"></img>
                 </div>
             </div>
         </div>
