--- a/skills.html
+++ b/skills.html
@@ -9,24 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/others.css"/>
     <link rel="icon" type="image/x-icon" href="/images/icon.png">
-    <script src="scripts/current.js" defer></script>
     <script src="scripts/toggleimages.js" defer></script>
     <script src="scripts/imgopen.js" defer></script>
-    <script src="scripts/mobile.js"></script>
+    <script src="scripts/mobile.js" defer></script>
+    <script src="scripts/current.js" defer></script>
 </head>
-<body onload="mobile_other(); set_current_page('skills')">
+<body>
     <div class="grid-container">
         <div class="header_bg"></div>
         <a class="signature" href="index.html">NicholasYoung.info</a>
         <div class="current"></div>
         <div class="inner"></div>
         <div class="pages">
-            <a href="index.html" class="home" onmouseover="update_current_position_to_class('home')" onmouseleave="update_current_position()">Home</a>
-            <a href="skills.html" class="skills" onmouseover="update_current_position_to_class('skills')" onmouseleave="update_current_position()">Skills and Experience</a>
-            <a href="projects.html" class="projects" onmouseover="update_current_position_to_class('projects')" onmouseleave="update_current_position()">Projects</a>
-            <a href="hobbies.html" class="hobbies" onmouseover="update_current_position_to_class('hobbies')" onmouseleave="update_current_position()">Hobbies</a>
-            <a href="resume.html" class="resume" onmouseover="update_current_position_to_class('resume')" onmouseleave="update_current_position()">Resume</a>
-            <a href="valve.html" class="valve" onmouseover="update_current_position_to_class('valve')" onmouseleave="update_current_position()">Valve</a>
+            <a href="index.html" class="home">Home</a>
+            <a href="skills.html" class="skills">Skills and Experience</a>
+            <a href="projects.html" class="projects">Projects</a>
+            <a href="hobbies.html" class="hobbies">Hobbies</a>
+            <a href="resume.html" class="resume">Resume</a>
+            <a href="valve.html" class="valve">Valve</a>
         </div>
         <div class="main content">
             <div class="content">
