--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="grid-container">
         <div class="background">
-            <img src="images/homepage_bg.png" alt="" class="bg_img">
+            <img src="images/homepage_bg.jpg" alt="" class="bg_img">
         </div>
         <div class="background grad_right"></div>
         <div class="background grad_top"></div>
@@ -35,7 +35,6 @@
         <div class="intro">I'm a computer engineer with a passion for fun technology and new experiences.
             I graduated from the University of Michigan in 2021 with my masters in electrical and computer engineering with a focus on embedded systems,
             and have had the pleasure of helping develop Intel's cutting edge processors as a hardware validation engineer ever since.
-            However, I have finally decided to pursue my dream of putting my interest in embedded systems to use creating exciting new virtual reality devices.
             Thank you for visiting my website, and I hope you enjoy learning more about me!
         </div>
         <div class="findme">
