--- a/valve.html
+++ b/valve.html
@@ -31,49 +31,10 @@
                 <div class="content-item">
                     <div class="content-text">
                         If you're a Valve employee, hello and thank you for checking out my website!
-                        I really appreciate you taking the time to learn more about me.
-                        <br /><br />
-                        I'm sure it will sound like an exaggeration, but I have been saying for years that working at Valve is my dream job.
-                        My love of video games and interest in the hardware and software you produce is part of it,
-                        but the biggest reason is just that I have an immense amount of respect for Valve as a company.
-                        
-                        I have always been a fan of how Valve is not afraid to push boundaries and try new things.
-                        The original Half Life was ground breaking and one of the most influential FPS games ever,
-                        and this legacy has continued to this day with Half Life: Alyx being the most impressive VR game to date.
-                        And on the topic of VR, it would be remiss of me to not mention the contributions Valve made to consumer VR
-                        with helping to create the Vive and SteamVR before there was any significant demand for the technology.
-
-                        I also love that Valve has worked on projects which helps consumers, even if there doesn't appear to be an immediate monetary benefit.
-                        Just take a look at the Steam Deck for example. Valve partnered with iFixit to supply parts and tutorials for people to repair their own devices with,
-                        provided windows drivers despite not officially supporting the operating system,
-                        and even encouraged people to use third party USB-C docks over the official one if they felt it worked better for their use case.
-                        These may seem like small things by themselves, but as a whole they show that Valve really cares about its customers.
-
-                        All of this is to say that I hold Valve in extremely high regard, and would love the opportunity to work alongside you there.
+                        I wanted to take a minute to emphasize that I hold Valve in extremely high regard, and would love the opportunity to work alongside you there.
                         Should a position at Valve be offered to me, I would almost certainly accept it.
-                        <br /><br />
-                        So with all that said, why exactly <i>should</i> a position be offered to me?
-                        Elsewhere on this website I have mentioned my skills such as programming and debugging, and while I am proud of those,
-                        I am well aware that many people have the same if not better credentials than me in those departments.
-                        What sets me apart from others though is my passion for embedded systems, fascination with trying new things, and love of video games.
-                        
-                        Rather than just a job position I want, working on embedded systems is something that genuinely interests me.
-                        This is especially true of systems pertaining to virtual reality and other human-computer interaction technologies,
-                        as I find them to be the most exciting things being developed today.
-
-                        A major reason for this is that it allows users to have brand new experiences that aren't really possible in any other way, which is something I am a huge fan of.
-                        I am more than happy to try out new things when the opportunity arises, and this is true for both my personal life and for work.
-                        My managers have praised me multiple times for my willingness to step up and do short stints with other teams when necessary.
-                        I have become a fast learner due to this, which helps me settle into any new experiences quickly whether as complex as a new position at work
-                        or as simple as trying out a new video game.
-
-                        And since this is Valve, I'm certain that playing video games is a useful skill to have.
-                        I've been playing video games as long as I can remember, from in browser flash games as a child to desktop games through Steam now as an adult.
-                        In fact I have plenty of experience with Valve's products, as I use Steam for launching games and playing with friends,
-                        I have over 2000 hours in CS:GO (although I'm still barely out of silver!), and I regularly use my Index to play VR games.
-                        This extends to all genres of games as well, and I can enjoy everything from fantasy RPGs to sci-fi FPS games.
-                        <br /><br />
-                        Overall I believe I would be a great fit for Valve, and I hope you feel the same.
+                        I truly believe my skills and mindset would allow me to thrive and contribute a lot at Valve, and I hope you feel the same.
+                        <br/><br/>
                         If you have any questions at all, don't hestitate to contact me! I would love to have the opportunity to talk with you.
                     </div>
                 </div>
