Pulled out duplicate CSS to its own file, updated resume, and added a new image for drawing

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/common.css"/>
     <link rel="stylesheet" href="styles/others.css"/>
     <link rel="icon" type="image/x-icon" href="/images/icon.png">
     <script src="scripts/toggleimages.js" defer></script>
@@ -59,7 +60,7 @@
                 <div class="content-title">Drawing</div>
                 <div class="content-item reverse">
                     <div class="img-container content-right">
-                        <img src="images/art/shading.jpg" class="content-image"></img>
+                        <img src="images/art/foxes.jpg" class="content-image"></img>
                     </div>
                     <div class="content-text">
                         As an engineer it is unsurprising that I enjoy creating things, but up until just over 2 months ago this had never included art of any kind.
@@ -71,6 +72,7 @@
                 </div>
                 <button onclick="toggle_visible('drawing')" class="img-button" id="button-drawing">Show additional images</button>
                 <div class="moreimages" id="images-drawing">
+                    <img src="images/art/shading.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/stilllife.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/housething.jpg" loading="lazy" class="additional-image"></img>
                     <img src="images/art/maze.jpg" loading="lazy" class="additional-image"></img>
